# The bh test fails after the Clang 11 upgrade.
# See https://github.com/microsoft/checkedc-llvm-test-suite/issues/102
#add_subdirectory(bh)
add_subdirectory(bisort)
add_subdirectory(em3d)
add_subdirectory(health)
add_subdirectory(mst)
add_subdirectory(perimeter)
add_subdirectory(power)
add_subdirectory(treeadd)
add_subdirectory(tsp)
add_subdirectory(voronoi)
